# continuous-improvement-harness

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml
.claude/agents/: execution-reviewer.md  executor.md  high-planner.md  plan-reviewer.md  planner.md
.claude/skills/cih/: SKILL.md
.github/workflows/: ci.yml  publish.yml
cih/: agents.py  attempts.py  config.py  contracts.py  dispatch.py  install.py  integration.py  ledger.py  merge_queue.py  orchestrator.py  progress.py  report.py  roles.py  runner.py  safety.py  scoping.py  staging.py  state.py  tdd_verifier.py  team.py  transitions.py  worktree.py
cih/_assets/agents/: execution-reviewer.md  executor.md  high-planner.md  plan-reviewer.md  planner.md
cih/_assets/skill/: SKILL.md
docs/superpowers/plans/: 2026-06-05-cih-implementation.md  2026-06-06-cih-visual-report.md  2026-06-07-cih-qa-scoping.md
docs/superpowers/specs/: 2026-06-05-cih-design.md  2026-06-06-cih-visual-report-design.md  2026-06-07-cih-qa-scoping-design.md
tests/: test_agents.py  test_attempts.py  test_claude_cli_runner.py  test_config.py  test_conformance.py  test_contracts.py  test_dispatch.py  test_e2e_smoke.py  test_install_skill.py  test_integration.py  test_ledger.py  test_merge_queue.py  test_orchestrator.py  test_packaged_assets.py  test_progress.py  test_report.py  test_resume.py  test_roles.py  test_runner_cli.py  test_safety.py  test_scaffold.py  test_scoping.py  test_skill_doc.py  test_staging.py  test_state.py  test_tdd_verifier.py  test_team.py  test_transitions.py  test_worktree.py
