[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cih-agent"
version = "0.1.0"
description = "A hierarchical multi-agent harness that autonomously audits a codebase, finds high-value improvements, and applies them in TDD-gated iterations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Huijo Kim", email = "huijo.kim@voids.ai" }]
keywords = ["agents", "tdd", "code-improvement", "claude", "automation"]
dependencies = ["jsonschema>=4.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/ccomkhj/continuous-improvement-harness"
Repository = "https://github.com/ccomkhj/continuous-improvement-harness"
Issues = "https://github.com/ccomkhj/continuous-improvement-harness/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.0", "twine>=5.0"]

[project.scripts]
cih = "cih.runner:main"

[tool.setuptools.packages.find]
include = ["cih*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
