[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cih-agent"
dynamic = ["version"]
description = "A hierarchical multi-agent harness that autonomously audits a codebase, finds high-value improvements, and applies them in TDD-gated iterations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Huijo Kim", email = "huijo.kim@voids.ai" }]
keywords = ["agents", "tdd", "code-improvement", "claude", "automation"]
dependencies = ["jsonschema>=4.0", "questionary>=2.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/ccomkhj/continuous-improvement-harness"
Repository = "https://github.com/ccomkhj/continuous-improvement-harness"
Issues = "https://github.com/ccomkhj/continuous-improvement-harness/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.0", "twine>=5.0", "ruff>=0.6"]

[project.scripts]
cih = "cih.runner:main"

[tool.setuptools.dynamic]
version = { attr = "cih.__version__" }

[tool.setuptools.packages.find]
include = ["cih*"]

[tool.setuptools.package-data]
cih = ["_assets/agents/*.md", "_assets/skill/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501 (line length) is owned by the formatter; UP042 (str-Enum -> StrEnum) is
# deferred because it changes str()/format() semantics of the existing enums.
ignore = ["E501", "UP042"]

[tool.ruff.format]
# Defaults: double quotes, space indentation.
